src/test/ui/consts/const-eval/index-out-of-bounds-never-type.stderr
warning: any use of this value will cause an error
  --> $DIR/index-out-of-bounds-never-type.rs:10:61
   |
LL |     const VOID: ! = { let x = 0 * std::mem::size_of::<T>(); [][x] };
   |     -------------                                           ^^^^^ index out of bounds: the length is 0 but the index is 0
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/index-out-of-bounds-never-type.rs:4:9
   |
LL | #![warn(const_err, unconditional_panic)]
   |         ^^^^^^^^^

error: erroneous constant encountered
  --> $DIR/index-out-of-bounds-never-type.rs:17:13
   |
LL |     let _ = PrintName::<T>::VOID;
   |             ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

Future incompatibility report: Future breakage diagnostic:
warning: any use of this value will cause an error
  --> $DIR/index-out-of-bounds-never-type.rs:10:61
   |
LL |     const VOID: ! = { let x = 0 * std::mem::size_of::<T>(); [][x] };
   |     -------------                                           ^^^^^ index out of bounds: the length is 0 but the index is 0
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/index-out-of-bounds-never-type.rs:4:9
   |
LL | #![warn(const_err, unconditional_panic)]
   |         ^^^^^^^^^

